# labs

./: .gitattributes  .gitignore
AISD/EXAMPLES/: CICLLIST.PAS  GRAF.PAS  HEHIR.PAS  HEHIROV.PAS  INDEX.PAS  MINGRAF1.PAS  NUMBER.PAS  OBJECT.PAS  OCHERED.PAS  PIRAMIDA.PAS  POISKPUT.PAS  POISKVKL.PAS  PutiN.PAS  QSort.pas  RASCHET.PAS  SORTSL_T.PAS  SOZDTREE.PAS  STEKWORK.PAS  SYNTAX.PAS  SYNTAX_M.PAS  TELHELP.PAS  TELINIT.PAS  TREE.PAS  TREECOUN.PAS  TREEIO.PAS  TREEION.PAS  TREESTEK.PAS  TREE_ARR.PAS  UDALSTEK.PAS  WORD.PAS
AISD/Lab1/: README.md  makefile
AISD/Lab2/: README.md  makefile
AISD/Lab3/: README.md  makefile
AISD/Lab4/: README.md  makefile
ASM/: makefile  qq.asm
BEP/Lab1/: index.php
BEP/Lab2/: index.php
BEP/Lab3/: index.php
BEP/Lab4/: index.php
BEP/Lab5/: index.php
BEP/Lab6/: 3.sql  4.sql  5.sql  6.sql  index.php  rental.sql
BEP/Project/: .gitignore  README.md  build.py  manage.py  package.json  requirements.txt  server.js  webpack.config.local.js
IIP/Rgr/: README.md
KM/Lab1/: fortest1.py
KM/Lab2/: list2merge.py
KM/Lab3/: quicksort.py
KM/Lab4/: izographes_1.py
KM/Lab5/: getSuccessors.py
KM/Lab6/: getAllStates.py  getSuccessors.py
KM/Lab7/: expandNode.py  insertQueuer.py
KM/Lab8/: astar.py  functions3_2.py
KPO/Lab1/: Readme.md  app.py  cases.txt  main.py
OPD/Project/example/: Application.cpp  Application.hpp  CMakeLists.txt
OPD/Project/example/controllers/: ObjectController.cpp  ObjectController.hpp
OPD/Project/example/resources/scenes/: game.tmx
OPD/Project/example/resources/shaders/: fire.glsl
(+538 files in other folders)
